# multithread_test_construction

./: .gitignore  .gitmodules  CMakeLists.txt  make-clean.sh  make-debug.sh  test.py  wscript
data/: input_data_101.txt  input_data_11.txt  input_data_6.txt  input_data_848.txt  input_data_article.txt  input_data_dashes.txt  input_data_minimal_for_test.txt  reference_101.txt  reference_11.txt  reference_6.txt  reference_848.txt  reference_article.txt  reference_dashes.txt  reference_minimal_for_test.txt
multithread/: fast_plan.cpp  global_settings.cpp  global_settings.h  input_matrix.cpp  input_matrix.h  irredundant_matrix.cpp  irredundant_matrix.h  irredundant_matrix_array.cpp  irredundant_matrix_array.h  irredundant_matrix_base.cpp  irredundant_matrix_base.h  irredundant_matrix_queue.h  irreduntant_matrix.cpp  irreduntant_matrix_factory.h  irreduntant_matrix_queue.cpp  main.cpp  multithread.pro  optimal_plan.cpp  optimal_plan.h  row.cpp  row.h  timecollector.cpp  timecollector.h  workrow.h
scripts/: __init__.py  cogn.py  gen_minimal.py  reduce_time_data.py  util_tests.py  utils.py  whelper.py
scripts/analyzer/: __init__.py  analyzer.css  analyzer.js  index.html  multithread-cogn.js
scripts/cogn/: index.html  multithread-cogn.css  multithread-cogn.js
src/: cover_breadthfirst.cpp  cover_common.cpp  cover_common.hpp  cover_cuda.cpp  cover_cuda.cu  cover_cuda.h  cover_depth_task.h  cover_depth_task.hpp  cover_depthfirst.cpp  cover_generator.hpp  cover_program.cpp  cudacover.cu  cudacover.h  datafile.cpp  datafile.hpp  divide2_plan.cpp  divide2_plan.h  divide2_plan.hpp  fast_plan.h  global_settings.h  input_matrix.cpp  input_matrix.h  input_matrix.hpp  irredundant_matrix.cpp  irredundant_matrix.h  irredundant_matrix.hpp  main.cpp  manyworkers_plan.cpp  manyworkers_plan.h  manyworkers_plan.hpp  masterworker_plan.cpp  masterworker_plan.h  optimal_plan.cpp  optimal_plan.h  resultset.cpp  resultset.h  resultset.hpp  row.cpp  row.hpp  timecollector.cpp  (+4 more)
